--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Lajos Working calendar</title>
 </head>
 <body>
-  <iframe src="https://calendar.google.com/calendar/embed?src=hb2vrh5gnkm7tki6lfg2tkomt0%40group.calendar.google.com&ctz=Europe%2FBudapest" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://calendar.google.com/calendar/embed?src=hb2vrh5gnkm7tki6lfg2tkomt0%40group.calendar.google.com&ctz=Europe%2FBudapest&wkst=2&hl=en" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
   <hr/>
